Fix Apache permission issues: Remove read_only and user restrictions, add log tmpfs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,11 +36,10 @@ services:
       - wpnet
     security_opt:
       - no-new-privileges:true
-    read_only: true
     tmpfs:
       - /tmp
       - /var/run/apache2
-    user: "33:33"
+      - /var/log/apache2
 
 volumes:
   mysqlvolume:
