--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - "8080:80"
     volumes:
       - wpvolume:/var/www/html
+      - ./logs:/var/log/apache2
     networks:
       - wpnet
     security_opt:
@@ -39,7 +40,6 @@ services:
     tmpfs:
       - /tmp
       - /var/run/apache2
-      - /var/log/apache2
 
 volumes:
   mysqlvolume:
