Add MySQL logging: Mount MySQL logs to ./logs directory with error, general, and slow query logs

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,18 @@ services:
       - .env
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: "true"
+      MYSQL_LOG_ERROR: "/var/log/mysql/error.log"
+      MYSQL_GENERAL_LOG: "1"
+      MYSQL_GENERAL_LOG_FILE: "/var/log/mysql/general.log"
+      MYSQL_SLOW_QUERY_LOG: "1"
+      MYSQL_SLOW_QUERY_LOG_FILE: "/var/log/mysql/slow.log"
     volumes:
       - mysqlvolume:/var/lib/mysql
+      - ./logs:/var/log/mysql
     networks:
       - wpnet
     security_opt:
       - no-new-privileges:true
-    read_only: true
     tmpfs:
       - /tmp
       - /var/run/mysqld
