--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ wpvolume/
 logs/
 logs/*
 !logs/.gitkeep
+logs/wordpress/*
+!logs/wordpress/.gitkeep
+logs/database/*
+!logs/database/.gitkeep
 
 # OS generated files
 .DS_Store
